--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="home">Home</string>
     <string name="events">Events</string>
     <string name="history">History</string>
+    <string name="title_activity_event_detail">EventDetailActivity</string>
 </resources>
