--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="events">Events</string>
     <string name="history">History</string>
     <string name="title_activity_event_detail">EventDetailActivity</string>
+    <string name="folder">Folder Icon</string>
 </resources>
