--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ISENSmartCompanion</string>
+    <string name="app_name">ISEN SMART COMPANION</string>
     <string name="logo_isen">Logo ISEN</string>
     <string name="send_button">Send button</string>
     <string name="home">Home</string>
